# azooKey-Desktop

./: .gitignore  .gitmodules  .swiftlint.yml  CMakeLists.txt  README.md  com.azooKey.azooKeyMac.OpenAIService.plist  dev.ensan.inputmethod.azooKeyMac.OpenAIService.plist  distribution.xml  install.sh  pkgbuild.sh  postinstall
.github/workflows/: swift.yml  windows.yml
Core/: Package.swift
Core/Sources/ConverterServer/: main.swift
Core/Sources/Core/Configs/: BoolConfigItem.swift  CustomCodableConfigItem.swift  CustomInputTableStore.swift  DeprecatedConfigItem.swift  IntConfigItem.swift  KeyboardShortcut.swift  KeyboardShortcutConfigItem.swift  PuntuationConfigItem.swift  StringConfigItem.swift
Core/Sources/Core/InputUtils/: CandidatePresentationContext.swift  EmojiDictionary.swift  InputState.swift  KeyEventCore.swift  OptionDirectInputResolver.swift  RomajiConverter.swift  RomajiTable.swift  SegmentsManager.swift
Core/Sources/Core/KeyMap/: KeyMap+hankaku2zenkaku.swift  KeyMap+kanaInput.swift
Core/Sources/Core/LLM/: LLMClient.swift  LLMClientManager.swift  LLMConnectionTester.swift  LLMPrompts.swift  LLMResponseParser.swift  LLMTypes.swift  OpenAIClientAdapter.swift  OpenAICompatibleClient.swift
Core/Sources/Core/MagicConversion/: AIBackend.swift  FoundationModelsClient.swift  OpenAIClient.swift
Core/Sources/Core/OpenAI/: OpenAIPrompts.swift
Core/Sources/Core/Resources/: emoji.json
Core/Sources/Core/UserDictionary/: CompiledUserDictionaryStore.swift  SystemUserDictionaryHelper.swift  UserDictionaryIndexStore.swift  UserDictionaryTextFormat.swift
Core/Sources/Core/Windows/: WindowPositioning.swift
Core/Sources/Core/XPC/: ConverterServerXPCProtocol.swift
Core/Tests/CoreTests/: LLMTests.swift
Core/Tests/CoreTests/InputUtils/: RomajiConverterTests.swift  RomajiTableTests.swift
Core/Tests/CoreTests/InputUtilsTests/: ControlShortcutRoutingTests.swift  EmojiDictionaryTests.swift  InputStateEmojiTests.swift  InputStateSpaceTests.swift  OptionDirectInputResolverTests.swift  SegmentsManagerAdditionalCandidatesTests.swift  SegmentsManagerPredictionBackspaceCorrectionTests.swift  UserActionOptionPunctuationTests.swift
Core/Tests/CoreTests/KeyMapTests/: KanaInputTests.swift
Tools/: install_converter_server_launch_agent.sh
azooKeyMac/: AppDelegate.swift  Info.plist  azooKeyMac.entitlements
azooKeyMac.xcodeproj/: project.pbxproj
azooKeyMac/Configs/: BoolConfigItem.swift  CustomCodableConfigItem.swift  CustomInputTableStore.swift  DeprecatedConfigItem.swift  KeyboardShortcut.swift  KeyboardShortcutConfigItem.swift  SecureConfigItem.swift  StringConfigItem.swift
azooKeyMac/InputController/: ConfigurationProviderAdapter.swift  ConverterServerClient.swift  CustomLLMClient.swift  GeminiClient.swift  InputState+NSEvent.swift  LLMClient.swift  LLMClientManager.swift  LLMConnectionTester.swift  LLMResponseParser.swift  NSEvent.swift  OpenAIClient.swift  OpenAIClientAdapter.swift  OpenAICompatibleClient.swift  OpenAIXPCClient.swift  SegmentsManager.swift  UserAction+getUserAction.swift  WindowPositioning+CoreGraphics.swift  azooKeyMacInputController+SelectedTextTransform.swift  azooKeyMacInputController.swift  azooKeyMacInputControllerHelper.swift
azooKeyMac/InputController/CandidateWindow/: BaseCandidateViewController.swift  CandidateView.swift  SuggestCandidatesViewController.swift
azooKeyMac/Tests/: LLMClientTests.swift
azooKeyMac/Windows/: ConfigState.swift  ConfigWindow.swift  CustomPromptShortcutsEditor.swift  KeyBindingEditorWindow.swift  KeyboardShortcutRecorder.swift  PromptInputWindow.swift  RomajiTableEditorWindow.swift  UserDictionaryEditorWindow.swift
azooKeyMac/Windows/PromptInput/: CustomTextField.swift  ModernButtonStyles.swift  PromptHistoryItem.swift  PromptInputView.swift  PromptInputWindow.swift
azooKeyMacOpenAIService/: Info.plist  OpenAIService.swift  OpenAIServiceProtocol.swift  main.swift
azooKeyMacTests/: ChromiumDeadlockRegressionTests.swift
bench/: CMakeLists.txt  live_bench.cpp
core/: CMakeLists.txt
core/data/: mock-dictionary.tsv
core/src/: RomajiKanaConverter.cpp  SimpleConverter.cpp
core/tests/: CMakeLists.txt  romaji_kana_converter_test.cpp  simple_converter_test.cpp
docs/: debugging.md  tsf-design-memo.md  windows-full-native-port-plan.md  windows-port-asset-audit.md  windows-tsf-host-architecture.md  zenzai-gpu-route.md
ime-tsf/: CMakeLists.txt
ime-tsf/include/azookey/: Registrar.h  TextService.h  TextServiceFactory.h
ime-tsf/src/: DllMain.cpp  Registrar.cpp  TextService.cpp  TextServiceFactory.cpp
inference-host/: CMakeLists.txt
inference-host/include/azookey/host/: Dispatcher.h  InferenceEngine.h  RequestScheduler.h
inference-host/src/: Dispatcher.cpp  InferenceEngine.cpp  RequestScheduler.cpp  main.cpp
inference-host/tests/: CMakeLists.txt  dispatcher_test.cpp  engine_test.cpp  scheduler_test.cpp
installer/: postinstall
ipc/: CMakeLists.txt
ipc/include/azookey/ipc/: Json.h  Messages.h  NamedPipeTransport.h  Payloads.h
ipc/src/: Json.cpp  Messages.cpp  NamedPipeTransport.cpp  Payloads.cpp
ipc/tests/: CMakeLists.txt  messages_test.cpp  named_pipe_transport_test.cpp  payloads_test.cpp  tip_client_ipc_test.cpp
learning/: CMakeLists.txt
learning/src/: LearningStore.cpp  Reranker.cpp  UserDictionary.cpp
learning/tests/: CMakeLists.txt  learning_test.cpp  reranker_test.cpp  user_dictionary_test.cpp
legacy/: README.md
legacy/Core/: Package.swift
legacy/azooKeyMac/: AppDelegate.swift
legacy/azooKeyMac.xcodeproj/: project.pbxproj
legacy/azooKeyMac/Windows/: ConfigWindow.swift
legacy/azooKeyMacTests/: ChromiumDeadlockRegressionTests.swift
plans/: development-plan.md  windows-port-roadmap.md
scripts/: register.ps1  unregister.ps1
settings/: mvp-settings.schema.json
tsf-tip/: CMakeLists.txt
tsf-tip/include/azookey/tsf/: CandidateWindow.h  DisplayAttribute.h  TextService.h  TextServiceFactory.h
tsf-tip/src/: CandidateWindow.cpp  DisplayAttribute.cpp  DllMain.cpp  TextService.cpp  TextServiceFactory.cpp  exports.def
tsf-tip/tests/: com_smoke_test.cpp
(+20 files in other folders)
